--- a/Pokemon/Base.lproj/Main.storyboard
+++ b/Pokemon/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pokemon" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,102 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="1w9-aG-aef">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ii-XH-pG0">
+                                <rect key="frame" x="315" y="40" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="K5B-S5-Za3"/>
+                                    <constraint firstAttribute="height" constant="50" id="b2S-dW-gIr"/>
+                                </constraints>
+                                <state key="normal" image="compass"/>
+                                <connections>
+                                    <action selector="centerTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EQx-nf-bDR"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l3f-AA-Hg2">
+                                <rect key="frame" x="162" y="597" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Dup-5n-G9B"/>
+                                    <constraint firstAttribute="width" constant="50" id="qHY-6P-g9D"/>
+                                </constraints>
+                                <state key="normal" image="pokeball"/>
+                                <connections>
+                                    <segue destination="11s-Pa-Hiu" kind="presentation" id="La5-9N-vDK"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="1w9-aG-aef" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1V5-gm-2As"/>
+                            <constraint firstItem="l3f-AA-Hg2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AuY-kR-oeu"/>
+                            <constraint firstItem="1ii-XH-pG0" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="Gcm-VY-8z9"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="l3f-AA-Hg2" secondAttribute="bottom" constant="20" id="TmZ-Ef-hd5"/>
+                            <constraint firstItem="1w9-aG-aef" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Vuq-p0-kQQ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1w9-aG-aef" secondAttribute="bottom" id="g86-a4-5xj"/>
+                            <constraint firstAttribute="trailing" secondItem="1w9-aG-aef" secondAttribute="trailing" id="oKM-hC-V8e"/>
+                            <constraint firstAttribute="trailing" secondItem="1ii-XH-pG0" secondAttribute="trailing" constant="10" id="pnb-hG-1n0"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="1w9-aG-aef" id="O4V-yE-0em"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--Pokedex View Controller-->
+        <scene sceneID="e22-Ry-ZN8">
+            <objects>
+                <viewController id="11s-Pa-Hiu" customClass="PokedexViewController" customModule="Pokemon" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="c27-oU-138"/>
+                        <viewControllerLayoutGuide type="bottom" id="YeY-KK-nNK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OTT-FO-NeT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="baX-6C-h4S">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BEt-6I-b9W">
+                                <rect key="frame" x="162.5" y="597" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Pxq-GB-cGy"/>
+                                    <constraint firstAttribute="width" constant="50" id="qeO-sw-Ry5"/>
+                                </constraints>
+                                <state key="normal" image="map"/>
+                                <connections>
+                                    <action selector="mapTapped:" destination="11s-Pa-Hiu" eventType="touchUpInside" id="G6Q-V5-Zg3"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BEt-6I-b9W" firstAttribute="centerX" secondItem="OTT-FO-NeT" secondAttribute="centerX" id="I6u-J8-dFl"/>
+                            <constraint firstAttribute="trailing" secondItem="baX-6C-h4S" secondAttribute="trailing" id="KP1-XS-caa"/>
+                            <constraint firstItem="YeY-KK-nNK" firstAttribute="top" secondItem="BEt-6I-b9W" secondAttribute="bottom" constant="20" id="Vrj-No-qnc"/>
+                            <constraint firstItem="YeY-KK-nNK" firstAttribute="top" secondItem="baX-6C-h4S" secondAttribute="bottom" id="Xiz-mx-5nG"/>
+                            <constraint firstItem="baX-6C-h4S" firstAttribute="top" secondItem="c27-oU-138" secondAttribute="bottom" id="iWb-LT-KZe"/>
+                            <constraint firstItem="baX-6C-h4S" firstAttribute="leading" secondItem="OTT-FO-NeT" secondAttribute="leading" id="x7K-7K-blx"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="baX-6C-h4S" id="hEa-e6-fVA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qo9-yC-FMm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="914" y="130"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="compass" width="512" height="512"/>
+        <image name="map" width="512" height="512"/>
+        <image name="pokeball" width="512" height="512"/>
+    </resources>
 </document>
